--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-# This workflow will build Go project
+# This workflow will build a Go project
 # For more information, ref: https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-go
 
 name: Infra API CI using Golang
@@ -8,7 +8,11 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-
+    
+concurrency:
+  group: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || format('push-{0}', github.sha) }}
+  cancel-in-progress: true
+  
 jobs:
   build-go:
     runs-on: ubuntu-latest
