chore: mc2 setup

--- a/deploy/docker-compose.local.yml
+++ b/deploy/docker-compose.local.yml
@@ -17,20 +17,21 @@ services:
     networks:
       - app-network
 
-  # mc2:
-  #   build:
-  #     context: ../services/mc2
-  #     dockerfile: Dockerfile
-  #     target: development
-  #   ports:
-  #     - "3002:3000"
-  #   env_file:
-  #     - ../env/.env.local
-  #   volumes:
-  #     - ../services/mc2:/app
-  #     - ../bin/mc2:/app/bin
-  #   networks:
-  #     - app-network
+  mc2:
+    container_name: "mc2"
+    build:
+      context: ../services/mc2
+      dockerfile: Dockerfile
+      target: development
+    ports:
+      - "3002:3000"
+    env_file:
+      - ../env/.env.local
+    volumes:
+      - ../services/mc2:/app
+      - ../bin/mc2:/app/bin
+    networks:
+      - app-network
 
 networks:
   app-network:
