--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,6 +9,21 @@ tasks:
       - bash ./scripts/install/task.sh
     silent: false
 
+  lint:
+    desc: Lint all Go services using golangci-lint
+    cmds:
+      - |
+        for service in ./services/*; do
+          if [ -f "$service/go.mod" ]; then
+            echo "🔍 Linting $service"
+            golangci-lint run --config .golangci.yml "$service/..."
+          else
+            echo "⏭️  Skipping $service (no go.mod)"
+          fi
+        done
+        echo ""
+        echo "✅ All services linted!"
+        
   # ------------------ RUN ------------------
   run:all:
     desc: "Run all microservices concurrently"
